2006-11-25  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
	
	* unichrome/via_id.c:
	* unichrome/via_accel.c:
 	
	Added additional ID's for the K8M890 cards
        Changed memory allocation order for the HW cursor and 2d engine. 

2006-10-29  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* libxvmc/viaLowLevel.c:
	* libxvmc/viaLowLevelPro.c:
	* unichrome/via_regs.h:

	Via managed to mix up the 2D / 3D engine busy status bits.
	Funny we never noticed this before.

2006-09-22  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_id.h
	* unichrome/via_video.c
	* unichrome/via_mode.c
	* unichrome/via_mode.h
	* unichrome/via_driver.c
	* unichrome/via_swov.c
	* unichrome/via_bandwidth.c
	* unichrome/via_accel.c
	* unichrome/via_vbe.c
	* unichrome/via_xvmc.c
	* unichrome/via_id.c

	Initial code for support of VT3336 cards	

2006-09-25  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/Makefile.am:

	Mention the overall revision number in the log, not just
	the driver code revision.

2006-09-24  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* libxvmc/viaXvMC.c: (XvMCSetAttribute):

	Fix a mutex unlocking issue (Luc Verhaegen).
	Have the lowlevel drivers check for the correct chipid.
	
2006-09-24  Michal Ludvig  <michal-at-logix-dot-cz>

	* man/Makefile.am:

	Fix man-page symlink for out-of-tree build (trac ticket #50).

2006-09-22  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_drmclient.h:

	include stdint.h instead of re-typedefining CARD32

2006-09-17  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIASave):

	Put in a few extra debugging lines.

2006-09-05  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_swov.c:

	Comment and whitespace tweaks.

2006-09-05  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_id.c:
