@@ -2308,17 +2308,17 @@ viaInitAccel(ScreenPtr pScreen)
     BoxRec AvailFBArea;
     int maxY;
 
+    if (pVia->hwcursor) {
+	pVia->FBFreeEnd -= VIA_CURSOR_SIZE;
+	pVia->CursorStart = pVia->FBFreeEnd;
+    }
+
     pVia->VQStart = 0;
     if (((pVia->FBFreeEnd - pVia->FBFreeStart) >= VIA_VQ_SIZE) &&
 	pVia->VQEnable) {
 	pVia->VQStart = pVia->FBFreeEnd - VIA_VQ_SIZE;
 	pVia->VQEnd = pVia->VQStart + VIA_VQ_SIZE - 1;
 	pVia->FBFreeEnd -= VIA_VQ_SIZE;
-    }
-
-    if (pVia->hwcursor) {
-	pVia->FBFreeEnd -= VIA_CURSOR_SIZE;
-	pVia->CursorStart = pVia->FBFreeEnd;
     }
 
     viaInitialize2DEngine(pScrn);
